# mybot

./: .env.example  .gitignore  CLAUDE.md  README.md  README_en.md  README_zh.md  __init__.py  pyproject.toml
agents/: __init__.py  deep_research_agent.py  plan_solve_agent.py  react_agent.py
agents/team/: __init__.py  blueprint.py  runner.py  topology.py
channels/: __init__.py  base.py  wechat.py  weixin.py
config/: __init__.py  config.py  settings.py
context/: __init__.py  compaction.py  context_manager.py  memory_service.py  semantic_filter.py  session.py  session_memory.py  session_store.py  token_budget.py
core/: __init__.py  agent_base.py  background_service.py  dispatcher.py  events.py  mcp_service.py  message_bus.py  middleware.py  orchestrator.py  runner.py  server.py  session_context.py  skills.py
docs/: architecture.md  claude-code-memory.md  claude-code-streaming-analysis.md  code-reading-guide.md  context-management.md  dream-scheduler.md  error-recovery.md  evaluation-system.md  hitl.md  memory-comparison.md  memory-search-algorithms.md  memory-system.md  middleware.md  multi-agent.md  multi-user-concurrency.md  observability-design.md  observability.md  reflect-mode.md  scheduled-tasks.md  skills-system.md  streaming-and-routing.md  tool-defense-in-depth.md  tools-system.md  tui-architecture.md  web-chat-ui.md  wechat-integration.md  xiaohongshu-turtle-soup.md
docs/CODEMAPS/: architecture.md  backend.md  data.md  dependencies.md
evals/: __init__.py  __main__.py  conftest.py  reporter.py  runner.py  scorers.py  test_eval.py
evals/benchmarks/: __init__.py
memory/: MEMORY.md  __init__.py  consolidator.py  dream.py  hybrid_store.py  manager.py  store.py  types.py
mybot/tui/: app.py  widgets.py
observability/: __init__.py  display.py  log.py  metrics.py  otel_bridge.py  persistence.py  recent.py  stream_renderer.py  subscribers.py  trace.py
prompt_templates/: AGENTS.md  HEARTBEAT.md  SOUL.md
prompt_templates/agent/: dream_phase1.md  dream_user.md  skills_section.md  subagent_system.md
prompt_templates/context/: summary.md
prompt_templates/dispatcher/: classifier_system.md  plan_solve_paradigm.md  react_paradigm.md
providers/: __init__.py  base.py  errors.py  openai_compatible_provider.py  retry.py
scripts/: loc.sh  xhs_publish.py  xhs_text_image.py
server_web/: index.html
services/: __init__.py  cron.py  heartbeat.py  hitl.py  scheduled_tasks.py  xiaohongshu.py
skills/: __init__.py
skills/algorithmic-art/: SKILL.md
skills/brand-guidelines/: SKILL.md
skills/canvas-design/: SKILL.md
skills/doc-coauthoring/: SKILL.md
skills/docx/: SKILL.md
skills/frontend-design/: SKILL.md
skills/internal-comms/: SKILL.md
skills/mcp-builder/: SKILL.md
skills/pdf/: SKILL.md
skills/pptx/: SKILL.md
skills/skill-creator/: SKILL.md
skills/slack-gif-creator/: SKILL.md
skills/theme-factory/: SKILL.md
skills/web-artifacts-builder/: SKILL.md
skills/webapp-testing/: SKILL.md
skills/xiaohongshu/: SKILL.md
skills/xlsx/: SKILL.md
test/agents/: test_multi_agent.py  test_plan_solve_agent.py
test/core/: test_events.py  (+7 more)
tools/: __init__.py  bash_tool.py  file_tools.py  grep_tool.py  guard.py  memory_tools.py  registry.py  schedule_task.py  subagent.py  tool.py  webfetch_tool.py  websearch_tool.py  xiaohongshu_publish.py
tui/: __init__.py  app.py  screens.py  theme.css  widgets.py
utils/: __init__.py  embedding.py  images.py  utils.py
(+62 files in other folders)
