[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mybot"
version = "0.1.0"
description = "A multi-provider AI agent framework with support for OpenAI-compatible APIs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "dmy997", email = "dmy997@github.com" },
]
keywords = ["ai", "agent", "llm", "openai", "chatbot"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "loguru>=0.7.0",
    "json-repair>=0.1.0",
    "rich>=13.0",
    "httpx>=0.25",
    "jinja2>=3.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "textual>=8.0",
    "sqlite-vec>=0.1",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]
server = [
    "starlette>=0.40",
    "uvicorn>=0.30",
]
evals = [
    "huggingface-hub>=0.20",
    "pyarrow>=14.0",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-data]
mybot = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["E501"]

[project.scripts]
mybot = "core.orchestrator:main"
mybot-server = "core.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test", "evals"]
